Reduced the line height on small caps to avoid huge rivers

--- a/source/assets/css/modules/_typography.scss
+++ b/source/assets/css/modules/_typography.scss
@@ -157,7 +157,8 @@ p {
 
 .small-caps,
 .sc {
-	@include font-feature-settings(smcp c2sc);
+	@include font-feature-settings(smcp c2sc lnum kern);
+	line-height: 1.1;
 }
 
 blockquote {
